# CMakeFramework

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
cmake/: CompilerWarnings.cmake  Conan.cmake
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
